--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "2.6.0",
     "core-js": "^2.5.4",
+    "moment": "^2.24.0",
     "ngx-onsenui": "^7.0.0",
     "onsenui": "^2.10.6",
     "rxjs": "~6.3.3",
