--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cordova-ios": "^4.5.5",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-email": "^1.2.7",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "2.6.0",
     "core-js": "^2.5.4",
@@ -58,7 +59,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-camera": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-email": {}
+      "cordova-plugin-email": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "ios"
