--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cordova-ios": "^4.5.5",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-file": "~6.0.1",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "2.6.0",
