--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "cordova-android": "^8.0.0",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-file": "~6.0.1",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "2.6.0",
+    "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.5.4",
     "ngx-onsenui": "^7.0.0",
     "onsenui": "^2.10.6",
@@ -36,13 +37,13 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular/compiler-cli": "^7.2.13",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -60,13 +61,14 @@
     "plugins": {
       "cordova-plugin-whitelist": {},
       "cordova-plugin-camera": {},
-      "cordova-sqlite-storage": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-app-version": {}
+      "cordova-plugin-app-version": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
