--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
     - 8.9
 
+addons:
+  chrome: stable
+
 before_script:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
